--- a/notebooks/plot_case_diff_vocab_size.ipynb
+++ b/notebooks/plot_case_diff_vocab_size.ipynb
@@ -8,7 +8,24 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn import linear_model"
+    "from sklearn import linear_model\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from collections import Counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the initial state of the RNG\n",
+    "state = np.random.get_state()[1][0]\n",
+    "print(state)\n",
+    "\n",
+    "np.random.seed(seed=711)\n",
+    "state = np.random.get_state()[1][0]\n",
+    "print(state)"
    ]
   },
   {
@@ -50,27 +67,27 @@
    "source": [
     "# size of the training set for each tbid\n",
     "training_dict = {'ar_padt':6075,\n",
-    "'bg_btb': 8907,\n",
-    "'cs_cac': 23478,\n",
-    "'cs_fictree': 10160,\n",
-    "'cs_pdt': 68495,\n",
-    "'en_ewt': 12543,\n",
-    "'et_ewt': 1116,\n",
-    "'fr_sequoia': 2231,\n",
-    "'fi_tdt': 12217,\n",
-    "'it_isdt': 13121,\n",
-    "'nl_alpino': 12264,\n",
-    "'nl_lassysmall': 5787,\n",
-    "'lt_alksnis': 2341,\n",
-    "'lv_lvtb': 10156, \n",
-    "'pl_lfg': 13774,\n",
-    "'pl_pdb': 17722,\n",
-    "'ru_syntagrus': 48814,\n",
-    "'sk_snk': 8483,\n",
-    "'sv_talbanken': 4303,\n",
-    "'ta_ttb':400,\n",
-    "'uk_iu': 5496\n",
-    "}"
+    "                 'bg_btb': 8907,\n",
+    "                 'cs_cac': 23478,\n",
+    "                 'cs_fictree': 10160,\n",
+    "                 'cs_pdt': 68495,\n",
+    "                 'en_ewt': 12543,\n",
+    "                 'et_ewt': 1116,\n",
+    "                 'fr_sequoia': 2231,\n",
+    "                 'fi_tdt': 12217,\n",
+    "                 'it_isdt': 13121,\n",
+    "                 'nl_alpino': 12264,\n",
+    "                 'nl_lassysmall': 5787,\n",
+    "                 'lt_alksnis': 2341,\n",
+    "                 'lv_lvtb': 10156, \n",
+    "                 'pl_lfg': 13774,\n",
+    "                 'pl_pdb': 17722,\n",
+    "                 'ru_syntagrus': 48814,\n",
+    "                 'sk_snk': 8483,\n",
+    "                 'sv_talbanken': 4303,\n",
+    "                 'ta_ttb':400,\n",
+    "                 'uk_iu': 5496\n",
+    "                }"
    ]
   },
   {
@@ -79,11 +96,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# skip pl_lfg as we used pl_pdb for the test set, et_ewt we used rule-based\n",
-    "# fr_sequoia doesn't apply the rule.\n",
+    "# pl_lfg - we used pl_pdb for the test set, et_ewt we used rule-based and fr_sequoia doesn't apply the rule.\n",
     "\n",
-    "TBIDS_TO_SKIP = ['et_edt', 'fr_sequoia', 'pl_lfg']\n",
-    "#TBIDS_TO_SKIP = ['et_edt', 'fr_sequoia', 'pl_lfg', 'ar_padt', 'ta_ttb']"
+    "#TBIDS_TO_SKIP = ['et_edt', 'fr_sequoia', 'pl_lfg']\n",
+    "TBIDS_TO_SKIP = ['et_edt', 'fr_sequoia', 'pl_lfg', 'ar_padt', 'ta_ttb', 'fi_tdt', 'lv_lvtb', 'lt_alksnis', 'ru_syntagrus']"
    ]
   },
   {
@@ -98,13 +114,13 @@
     "gold_success = []\n",
     "system_success = []\n",
     "\n",
-    "# Response/Dependent Variable\n",
-    "# y values: differences between success rate of rule on gold vs. dev\n",
+    "# Y / Response / Dependent Variable\n",
+    "# difference between the success rate of rule on gold vs. dev\n",
     "diffs = []\n",
     "\n",
-    "# Predictor/Independent Variable(s)\n",
-    "# x values: vocabulary (label set) size\n",
-    "# x values: training set size\n",
+    "# X / Predictor / Independent Variable(s)\n",
+    "# vocabulary (label set) size\n",
+    "# training set size\n",
     "vocab_sizes = []\n",
     "training_sizes = []\n",
     "\n",
@@ -118,25 +134,22 @@
     "            if tbid not in TBIDS_TO_SKIP:\n",
     "                gold_s = items[1]\n",
     "                system_s = items[2]\n",
-    "                gold_s = gold_s.split(\"%\")[0]\n",
-    "                system_s = system_s.split(\"%\")[0]\n",
-    "                \n",
+    "                gold_s = float(gold_s.split(\"%\")[0]) * 100\n",
+    "                system_s = float(system_s.split(\"%\")[0]) * 100\n",
     "                diff = items[3]\n",
-    "                # remove percent sign\n",
-    "                diff = diff.split(\"%\")[0]\n",
-    "                diff = float(diff)\n",
-    "                if diff * 100 > 10:\n",
+    "                diff = float(diff.split(\"%\")[0]) * 100\n",
+    "                if diff > 10:\n",
     "                    print(\"warning: considerable difference for {}\".format(tbid))\n",
     "                tbids.append(tbid)\n",
-    "                gold_success.append(float(gold_s) * 100)\n",
-    "                system_success.append(float(system_s) * 100)\n",
-    "                diffs.append(float(diff) * 100)\n",
-    "            \n",
+    "                gold_success.append(gold_s)\n",
+    "                system_success.append(system_s)\n",
+    "                diffs.append(diff)\n",
+    "                \n",
     "                if tbid in vocab_dict:\n",
     "                    vocab_sizes.append(vocab_dict[tbid])\n",
     "                else:\n",
-    "                    print(\"warning: no vocab size found for {}\".format(tbid))\n",
-    "                    \n",
+    "                    print(\"warning: no vocab size found for {}\".format(tbid)) \n",
+    "                \n",
     "                if tbid in training_dict:\n",
     "                    training_sizes.append(training_dict[tbid])\n",
     "                else:\n",
@@ -235,7 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.coef_"
+    "true_coefficient = model.coef_\n",
+    "print(\"true coefficient: {}\".format(true_coefficient))"
    ]
   },
   {
@@ -269,8 +283,55 @@
     "plt.legend(['Predicted line','TBID'])\n",
     "plt.xlabel('Vocabulary Size')\n",
     "plt.ylabel('Case Rule Success Difference between Gold and System')\n",
-    "plt.savefig('case_diff_vocab.png')\n",
+    "plt.savefig('case_diff_vocab_no_outliers.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Randomly shuffle Y\n",
+    "coefficients = []\n",
+    "intercepts = []\n",
+    "counts = Counter()\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    Y = np.array(diffs)\n",
+    "    np.random.shuffle(Y)\n",
+    "    Y = Y.reshape(-1, 1)\n",
+    "    \n",
+    "    model = linear_model.LinearRegression()\n",
+    "    model.fit(X,Y)\n",
+    "    \n",
+    "    coefficient = model.coef_\n",
+    "    intercept = model.intercept_\n",
+    " \n",
+    "    if coefficient > 0:\n",
+    "        counts.update([\"coefficient is positive\"])\n",
+    "    elif coefficient < 0:\n",
+    "        counts.update([\"coefficient is negative\"])\n",
+    "    \n",
+    "    if coefficient > true_coefficient:\n",
+    "        #print(f\"shuffled {coefficient} is more positive than {true_coefficient}\")\n",
+    "        counts.update([\"shuffled coefficient is more positive than true coefficient\"])\n",
+    "    elif coefficient < true_coefficient:\n",
+    "        #print(f\"shuffled {coefficient} is more negative than {true_coefficient}\")\n",
+    "        counts.update([\"shuffled coefficient is more negative than true coefficient\"])\n",
+    "    \n",
+    "    coefficients.append(coefficient)\n",
+    "    intercepts.append(intercept)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(counts)"
    ]
   },
   {
@@ -309,7 +370,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.coef_"
+    "true_coefficient = model.coef_\n",
+    "print(\"true coefficient: {}\".format(true_coefficient))"
    ]
   },
   {
@@ -341,8 +403,58 @@
     "plt.legend(['Predicted line','TBID'])\n",
     "plt.xlabel('Training Set Size')\n",
     "plt.ylabel('Case Rule Success Difference between Gold and System')\n",
-    "plt.savefig('case_diff_training.png')\n",
+    "plt.savefig('case_diff_training_no_outliers.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Randomly shuffle Y\n",
+    "coefficients = []\n",
+    "intercepts = []\n",
+    "counts = Counter()\n",
+    "\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    Y = np.array(diffs)\n",
+    "    np.random.shuffle(Y)\n",
+    "    Y = Y.reshape(-1, 1)\n",
+    "    \n",
+    "    model = linear_model.LinearRegression()\n",
+    "    model.fit(X,Y)\n",
+    "    \n",
+    "    coefficient = model.coef_\n",
+    "    intercept = model.intercept_\n",
+    " \n",
+    "    if coefficient > 0:\n",
+    "        counts.update([\"coefficient is positive\"])\n",
+    "    elif coefficient < 0:\n",
+    "        counts.update([\"coefficient is negative\"])\n",
+    "    \n",
+    "    if coefficient > true_coefficient:\n",
+    "        #print(f\"shuffled {coefficient} is more positive than {true_coefficient}\")\n",
+    "        counts.update([\"shuffled coefficient is more positive than true coefficient\"])\n",
+    "    elif coefficient < true_coefficient:\n",
+    "        #print(f\"shuffled {coefficient} is more negative than {true_coefficient}\")\n",
+    "        counts.update([\"shuffled coefficient is more negative than true coefficient\"])\n",
+    "    \n",
+    "    coefficients.append(coefficient)\n",
+    "    intercepts.append(intercept)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(counts)"
    ]
   }
  ],
